05-ARCHIVES/development-milestones/archives-collection/configurations/production-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aia-production-ingress-final
  namespace: aia-production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "aia-production-ip"
    kubernetes.io/ingress.class: "gce"
    ingress.gcp.kubernetes.io/managed-certificates: "aia-production-ssl"
    kubernetes.io/ingress.allow-http: "false"
    ingress.gcp.kubernetes.io/ssl-redirect: "true"
    ingress.gcp.kubernetes.io/force-ssl-redirect: "true"
    cloud.google.com/armor-config: '{"default-rule": {"evaluate-preconfigured-expr": ["owasp-crs-v030001-id942110-sqli", "owasp-crs-v030001-id942120-sqli"]}}'
spec:
  rules:
  - host: "013a.tech"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: aia-frontend-service
            port:
              number: 80
  - host: "www.013a.tech"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: aia-frontend-service
            port:
              number: 80
  - host: "api.013a.tech"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: aia-backend-service-simple
            port:
              number: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: aia-frontend-service-final
  namespace: aia-production
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "aia-backend-config"}'
spec:
  selector:
    app: aia-frontend
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
